--- a/src/components/home/hero.astro
+++ b/src/components/home/hero.astro
@@ -18,7 +18,7 @@ import KittyAstronaut from "@/assets/KittyAstronaut.svg";
       <h1
         class="text-pretty text-center md:text-left md:text-4xl lg:text-5xl tracking-wide"
       >
-        Elevate Your Documentation with a <i class="text-primary">Celestial</i> Touch
+        Elevate Your Documentation with a <i class="text-primary">Goota</i> Touch
       </h1>
       <a href="/getting-started" class="py-4">
         <Button size="lg" className="rounded-lg">
