--- a/src/components/docs/SideNavMenu.astro
+++ b/src/components/docs/SideNavMenu.astro
@@ -2,6 +2,7 @@
 import { capitalizeFirstLetter } from "@/lib/utils";
 import type { SideNavMenuProps } from "@/lib/types";
 
+const baseUrl = import.meta.env.BASE_URL;
 const { items, level } = Astro.props as SideNavMenuProps;
 const pathname: string = new URL(Astro.request.url).pathname;
 
@@ -24,7 +25,7 @@ const { class: className } = Astro.props;
         return (
           <li class="w-full">
             <a
-              href={`/${item.slug}`}
+              href={`${baseUrl}${item.slug}`}
               class={`${className}  text-sm leading-none w-full`}
             >
               {label}
