--- a/src/components/home/hero.astro
+++ b/src/components/home/hero.astro
@@ -3,6 +3,8 @@ const { class: className } = Astro.props;
 import { Image } from "astro:assets";
 import { Button } from "@/components/ui/button";
 import KittyAstronaut from "@/assets/KittyAstronaut.svg";
+
+const baseUrl = import.meta.env.BASE_URL;
 ---
 
 <div
@@ -20,7 +22,7 @@ import KittyAstronaut from "@/assets/KittyAstronaut.svg";
       >
         Elevate Your Documentation with a <i class="text-primary">Goota</i> Touch
       </h1>
-      <a href="/getting-started" class="py-4">
+      <a href={`${baseUrl}getting-started`} class="py-4">
         <Button size="lg" className="rounded-lg">
           <h4 class="text-lg">Get started</h4>
         </Button>
