--- a/src/components/core/HeadSEO.astro
+++ b/src/components/core/HeadSEO.astro
@@ -7,6 +7,7 @@ import "@fontsource-variable/montserrat";
 
 import { ViewTransitions } from "astro:transitions";
 
+// const baseUrl = import.meta.env.BASE_URL;
 import type { HeadSEOProps } from "@/lib/types";
 
 const canonicalURL = new URL(Astro.url);
@@ -16,6 +17,8 @@ if (Astro.props.ogImage === undefined) {
 }
 
 const { title, description, ogImage } = Astro.props as HeadSEOProps;
+
+const baseUrl = import.meta.env.BASE_URL;
 ---
 
 <meta charset="utf-8" />
@@ -24,7 +27,7 @@ const { title, description, ogImage } = Astro.props as HeadSEOProps;
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="generator" content={Astro.generator} />
 <link rel="canonical" href={canonicalURL} />
-<link rel="shortcut icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" type="image/svg+xml" href={`${baseUrl}/favicon.svg`} />
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
