--- a/src/components/core/NavMenu.astro
+++ b/src/components/core/NavMenu.astro
@@ -3,6 +3,7 @@ import { Button } from "@/components/ui/button";
 
 import { menu_items } from "@/config";
 
+const baseUrl = import.meta.env.BASE_URL;
 const pathname = new URL(Astro.request.url).pathname;
 const pathname_part = pathname.split("/")[1];
 ---
@@ -10,7 +11,7 @@ const pathname_part = pathname.split("/")[1];
 <div class="flex gap-4">
   {
     menu_items.map((item) => (
-      <a href={item.href}>
+      <a href={`${baseUrl}${item.href}`}>
         <Button
           variant={
             "/" + pathname_part === "/" + item.href.split("/")[1]
